--- a/packages/jest-runner/package.json
+++ b/packages/jest-runner/package.json
@@ -40,7 +40,7 @@
   "devDependencies": {
     "@stryker-mutator/test-helpers": "^2.5.0",
     "@types/semver": "~7.1.0",
-    "jest": "^24.8.0",
+    "jest": "^25.1.0",
     "react": "~16.12.0",
     "react-dom": "~16.12.0",
     "react-scripts": "~3.3.0",
@@ -48,9 +48,11 @@
   },
   "peerDependencies": {
     "@stryker-mutator/core": "^2.0.0",
-    "jest": ">= 22.0.0"
+    "jest": ">=22.0.0 <26.0.0"
   },
   "dependencies": {
+    "@jest/test-result": "^25.1.0",
+    "@jest/types": "^25.1.0",
     "@stryker-mutator/api": "^2.5.0",
     "semver": "~6.3.0"
   },
